--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "m3u8stream": "^0.8.6",
     "miniget": "^4.2.3",
     "sax": "^1.4.1",
-    "tough-cookie": "^4.1.4",
-    "undici": "^6.19.2"
+    "tough-cookie": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
